--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,5 +34,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Poetry'
 - !lcc 'PH'
+- GITenberg
 title: Sata ja yksi laulua; Hiihtäjän virsiä; Pyhä kevät
 url: http://www.gutenberg.org/ebooks/14649
